syntax = "proto3";

package rates;

option go_package = "./proto";

service RateService {
  rpc GetRates(GetRatesRequest) returns (GetRatesResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GetRatesRequest {}

message GetRatesResponse {
  double ask = 1;
  double bid = 2;
  string timestamp = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}